--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@babel/core": "^7.13.1",
     "@babel/preset-env": "^7.13.5",
     "babel-loader": "^8.2.2",
+    "css-loader": "^5.1.0",
+    "mini-css-extract-plugin": "^1.3.9",
     "webpack": "^5.24.2",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
